# home-energy-manager

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE_UPGRADE.md  ARCHITECTURE_V2_PLAN.md  BOOT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  disable_foxess_schedule.py  docker-compose.yml  energy_state.db  get_foxess_settings.py  pulp_daikin_sim.py  pulp_simulation.py  pyproject.toml  requirements-dev.txt  requirements-research.txt  requirements.txt  run_tomorrow_pulp_solar.py  test_foxess_schedule_keys.py  test_foxess_schedule_keys2.py  test_foxess_schedule_keys3.py
.cursor/: rules
.github/: pull_request_template.md
.gstack/: browse-audit.jsonl
deploy/: README.md  audit_held_schedule.py  compose.daikin-auth.yaml  compose.google-auth.yaml  compose.smartthings-auth.yaml  compose.yaml  hem.service  rollout.sh
docs/: ADR-001-api-quota-cache-layer.md  ADR-002-daikin-quota-integrity-hardening.md  ADR-003-mcp-boundary-enforcement.md  ADR-004-daikin-physics-estimator.md  ADR-005-fox-scheduler-idempotency.md  ADR-006-runtime-tunable-settings.md  ADR-INDEX.md  ARCHITECTURE.md  COCKPIT_PERF.md  DISPATCH_DECISIONS.md  LP_REGRESSION_WORKFLOW.md  OPENCLAW_BOUNDARY.md  PV_TRUST_GUARDRAIL.md  RUNBOOK.md  UI_API_INVENTORY.md  UI_DESIGN_UPLIFT.md  WINTER_THERMAL_MODEL.md  openclaw-nikola-plan-prompt.md  phase2-epic-tasks.md  phase3-epic-tasks.md  phase4-epic-tasks.md
quartz/: Dockerfile  app.py  requirements.txt
scripts/: README.md  analyse_planned_vs_actual_pv.py  (+24 more)
src/: db.py  (+19 more)
(+603 files in other folders)
