[project]
name = "home-energy-manager"
version = "10.0.0"
description = "Home energy orchestration (Fox ESS, Daikin, Octopus)"
readme = "README.md"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = ["E501", "UP042", "E731", "E741", "E702"]

[tool.ruff.lint.per-file-ignores]
"src/api/main.py" = ["E402"]
"src/db.py" = ["E402"]
"src/mcp_server.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
